[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Scroller.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/background_day.png" type="Texture" id=3]
[ext_resource path="res://PipeGroup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Bird.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]

script = ExtResource( 1 )

[node name="BackgroundScroller" parent="." instance=ExtResource( 2 )]

gap = 144
step = 288

[node name="Background1" type="Sprite" parent="BackgroundScroller"]

texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Background2" type="Sprite" parent="BackgroundScroller"]

position = Vector2( 144, 0 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="PipeGroup" parent="BackgroundScroller" instance=ExtResource( 4 )]

position = Vector2( 205.682, 99.1855 )

[node name="GroundScroller" parent="." instance=ExtResource( 2 )]

editor/display_folded = true
position = Vector2( 0, 200 )
_sections_unfolded = [ "Pause" ]
gap = 168
step = 336

[node name="Ground1" parent="GroundScroller" instance=ExtResource( 5 )]

[node name="Ground2" parent="GroundScroller" instance=ExtResource( 5 )]

position = Vector2( 168, 0 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Bird" parent="." instance=ExtResource( 6 )]

position = Vector2( 36, 72 )

[connection signal="died" from="Bird" to="." method="_on_Bird_died"]


